--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unit Testing</title>
+
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body{
+            font-size: 16px;
+        }
+       
+        .cal-fare{
+            text-align: center;
+            margin: 50px auto;
+            max-width: 500px;
+            background-color: lightblue;
+            height: 500px;
+            border-radius: 10px;
+            padding: 20px;
+        }
+
+        #cal-fare-btn,input{
+            display: inline-block;
+            margin-top: 30px;
+            width: 100%;
+            font-size: 20px;
+            padding: 5px;
+            outline: none;
+        }
+
+       #display-fare{
+           margin-top: 60px;
+       }
+    </style>
 </head>
 <body>
-    <h1>Unit Testing Demo</h1>
 
+    <div class="cal-fare">
+        <h1>Unit Testing Demo</h1>
+        <input type="text" name="km" id="km" placeholder="KM travelled">
+        <input type="text" name="min" id="min" placeholder="Minutes">
+        <button id="cal-fare-btn">Calculate Fare</button>
+
+        <h2 id="display-fare"></h2>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
