--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,13 @@
         }
 
        #display-fare{
-           margin-top: 60px;
+           margin: 30px 0;
+       }
+
+       #show-fare-btn{
+           width: 50%;
+           font-size: 18px;
+           padding: 2px;
        }
     </style>
 </head>
@@ -50,7 +56,12 @@
         <button id="cal-fare-btn">Calculate Fare</button>
 
         <h2 id="display-fare"></h2>
+        <button id="show-fare-btn">Fare Rates</button>
+        <div id="show-fare-rates"></div>
     </div>
+
+
+    
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./script.js"></script>
